--- a/package.json
+++ b/package.json
@@ -182,6 +182,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "14.14.10",
     "@types/react": "^16.9.44",
+    "@types/react-bootstrap-table-next": "^4.0.13",
+    "@types/react-bootstrap-table2-paginator": "^2.1.1",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
@@ -255,11 +257,14 @@
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
     "jquery": "^3.6.0",
+    "mdbreact": "^5.0.2",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
