--- a/src/package.json
+++ b/src/package.json
@@ -14,5 +14,8 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/react-bootstrap-table2-toolkit": "^2.1.4"
+  }
 }
