--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,6 @@
     "yarn.lock": true,
     "*.{css,sass,scss}.d.ts": true
   },
-  "python.pythonPath": "C:\\Python39\\python.exe",
+  "python.pythonPath": "C:\\Users\\Niko\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
   "git.ignoreLimitWarning": true
 }
