--- a/package.json
+++ b/package.json
@@ -263,6 +263,7 @@
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.3",
