--- a/package.json
+++ b/package.json
@@ -255,6 +255,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
+    "heroku": "^7.53.0",
     "history": "^5.0.0",
     "jquery": "^3.6.0",
     "mdbreact": "^5.0.2",
